--- a/src/practice_cpp/CMakeLists.txt
+++ b/src/practice_cpp/CMakeLists.txt
@@ -9,6 +9,8 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 
+include_directories(include)                  # 添加此功能包下的Include文件夹为头文件目录
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
