--- a/src/status_interfaces/CMakeLists.txt
+++ b/src/status_interfaces/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(practice_ros2_interfaces)
+project(status_interfaces)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -8,14 +8,9 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
-find_package(geometry_msgs REQUIRED)
+find_package(builtin_interfaces REQUIRED)
 
-rosidl_generate_interfaces(${PROJECT_NAME}
-  "msg/RobotPose.msg"
-  "msg/RobotStatus.msg"
-  "srv/MoveRobot.srv"
-  DEPENDENCIES geometry_msgs
-)
+
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
