--- a/src/status_interfaces/package.xml
+++ b/src/status_interfaces/package.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>practice_ros2_interfaces</name>
+  <name>status_interfaces</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="90362736@qq.com">hamster</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rosidl_default_generators</depend>
-  <depend>geometry_msgs</depend>
-
-  <member_of_group>rosidl_interface_packages</member_of_group>
+  <depend>builtin_interfaces</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
