--- a/src/status_display/CMakeLists.txt
+++ b/src/status_display/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(status_interfaces)
+project(status_display)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -7,12 +7,22 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(rosidl_default_generators REQUIRED)
-find_package(builtin_interfaces REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(status_interfaces REQUIRED)
+find_package(Qt5 REQUIRED COMPONENTS Widgets)
 
-rosidl_generate_interfaces(${PROJECT_NAME}
-  "msg/SystemStatus.msg"
-  DEPENDENCIES builtin_interfaces
+add_executable(hello_qt src/hello_qt.cpp)
+# ament_target_dependencies(hello_qt Qt5::Widgets)              这里注释是因为QT5非ROS的库，所以不用ament来添加依赖
+target_link_libraries(hello_qt Qt5::Widgets)
+
+add_executable(sys_status_display src/sys_status_display.cpp)
+target_link_libraries(sys_status_display Qt5::Widgets)
+ament_target_dependencies(sys_status_display rclcpp status_interfaces)
+
+install(TARGETS 
+  hello_qt
+  sys_status_display
+  DESTINATION lib/${PROJECT_NAME}
 )
 
 if(BUILD_TESTING)
